feat(sidebar): support bwr override and clean sidebar VT scenes

--- a/packages/rettangoli-ui/vt/specs/components/sidebar/hide-right-border.html
+++ b/packages/rettangoli-ui/vt/specs/components/sidebar/hide-right-border.html
@@ -1,9 +1,8 @@
 ---
 title: "Hide right border"
 ---
-<rtgl-view d="v" g="sm" h="100vh" w="f" p="lg">
-  <rtgl-text s="sm">Single sidebar with hide-right-border</rtgl-text>
-  <rtgl-sidebar id="sidebarNoBorder" hide-right-border h="360"></rtgl-sidebar>
+<rtgl-view h="100vh" w="f" p="lg">
+  <rtgl-sidebar id="sidebarNoBorder" bwr="none" h="360"></rtgl-sidebar>
 </rtgl-view>
 
 <script>
