--- a/packages/rettangoli-ui/vt/specs/components/sidebar/width-fill.html
+++ b/packages/rettangoli-ui/vt/specs/components/sidebar/width-fill.html
@@ -1,10 +1,9 @@
 ---
 title: "Width override with w=f"
 ---
-<rtgl-view d="v" g="sm" h="100vh" w="f" p="lg">
-  <rtgl-text s="sm">Single sidebar with w=f inside a 360px container</rtgl-text>
+<rtgl-view h="100vh" w="f" p="lg">
   <rtgl-view w="360" h="360" bw="xs" bc="bo" bgc="mu">
-    <rtgl-sidebar id="sidebarFill" hide-header hide-right-border w="f" h="f"></rtgl-sidebar>
+    <rtgl-sidebar id="sidebarFill" hide-header bwr="none" w="f" h="f"></rtgl-sidebar>
   </rtgl-view>
 </rtgl-view>
 
