--- a/packages/rettangoli-ui/vt/static/public/base.css
+++ b/packages/rettangoli-ui/vt/static/public/base.css
@@ -300,7 +300,7 @@ code:not(pre code) {
 
 a {
   color: var(--anchor-color, inherit);
-  text-decoration: var(--anchor-text-decoration, none);
+  text-decoration: var(--anchor-text-decoration, underline);
 }
 
 a:hover {
