--- a/packages/rettangoli-ui/vt/static/public/theme-rtgl-mono.css
+++ b/packages/rettangoli-ui/vt/static/public/theme-rtgl-mono.css
@@ -85,7 +85,7 @@
 
   --anchor-color: inherit;
   --anchor-color-hover: inherit;
-  --anchor-text-decoration: none;
+  --anchor-text-decoration: underline;
   --anchor-text-decoration-hover: underline;
 }
 
