--- a/packages/rettangoli-ui/vt/specs/components/form/with-checkbox.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/with-checkbox.html
@@ -25,7 +25,7 @@ title: "With Checkbox"
     }, {
       name: 'terms',
       type: 'checkbox',
-      checkboxLabel: 'I agree to the terms and conditions',
+      content: 'I agree to the terms and conditions',
       required: true,
     }, {
       name: 'notifications',
