--- a/packages/rettangoli-ui/vt/specs/components/form/with-select.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/with-select.html
@@ -27,6 +27,7 @@ title: "With Select"
       name: 'password',
       type: 'input-text',
       label: 'Password',
+      inputType: 'password',
       description: 'Choose a strong password',
       placeholder: 'Enter password',
       required: true,
