--- a/packages/rettangoli-ui/vt/specs/components/form/basic.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/basic.html
@@ -24,6 +24,7 @@ title: "Basic"
       name: 'password',
       type: 'input-text',
       label: 'Password',
+      inputType: 'password',
       description: 'Enter your password',
       required: true,
     }, {
