form: fix checkbox label text and compact form VT viewports

--- a/packages/rettangoli-ui/vt/specs/components/form/actions-vertical.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/actions-vertical.html
@@ -1,5 +1,9 @@
 ---
 title: "Actions - Vertical Layout"
+viewport:
+  id: form-compact
+  width: 700
+  height: 900
 ---
 <rtgl-view id="container" g="lg" h="100vh" w="100vw" wrap>
 </rtgl-view>
