--- a/packages/rettangoli-ui/vt/specs/components/form/validate-on-action.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/validate-on-action.html
@@ -10,6 +10,10 @@ steps:
   - action: wait
     ms: 200
   - action: screenshot
+viewport:
+  id: form-compact
+  width: 700
+  height: 900
 ---
 <rtgl-view id="container" g="lg" h="100vh" w="100vw" wrap>
 </rtgl-view>
