--- a/packages/rettangoli-ui/vt/specs/components/form/required-fields.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/required-fields.html
@@ -1,5 +1,9 @@
 ---
 title: "Required Fields"
+viewport:
+  id: form-compact
+  width: 700
+  height: 900
 ---
 <rtgl-view id="container" g="lg" h="100vh" w="100vw" wrap>
 </rtgl-view>
