--- a/packages/rettangoli-ui/vt/specs/components/form/update-key.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/update-key.html
@@ -1,5 +1,9 @@
 ---
 title: "Update Key"
+viewport:
+  id: form-compact
+  width: 700
+  height: 900
 ---
 <rtgl-view id="container" g="lg" h="100vh" w="100vw" wrap>
   <rtgl-button id="update-button">Update</rtgl-button>
